Remove Pillow dependency causing build failures
- Simplified requirements.txt to essential packages only
- Removed Pillow import from app.py (API-only approach)
- Added .python-version file for Python 3.11.7
- Updated render.yaml with explicit free plan configuration
- Should resolve Python 3.13 compatibility issues

--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,8 @@ services:
   - type: web
     name: fluxflow-studio
     env: python
+    region: oregon
+    plan: free
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn --bind 0.0.0.0:$PORT app:app
     envVars:
